# nuzantara

./: .ai-assistant-instructions  .claudeignore  .coverage  .cursorrules  .dockerignore  .env.example  .env.production  .env.spark  .eslintignore  .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierignore  .railway  .railway-deploy  .railway-deploy-trigger  .railway-trigger  .semgrepignore  .test-hook.ts  30_domande_business_jaksel.py  50_domande_zantara.py  AI_AGENTS_CHECKLIST.md  AI_BUILD_DECISION_GUIDE.md  AI_CODE_QUALITY_FIX.md  AI_HANDEOVER_PROTOCOL.md  AI_HANDOVER_PROTOCOL.md  AI_ONBOARDING.md  ANALISI_5_GIRI.md  ANALISI_STRATEGICA_ARCHITETTURA.md  ANALISI_STRATEGICA_EXECUTIVE_SUMMARY.md  ANALISI_WEBAPP_COMPLETA.md  ANALISI_WEBAPP_REALE.md  ANALYSIS_INDEX.md  ANALYTICS_ENGINE_SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_CLEAN_STATUS.md  ARCHITECTURE_UPDATE_REPORT_2025-10-27.md  AUDIT_CORRECTION.md  AUTOMATION_SETUP.md  AUTONOMOUS_AGENTS_MASTER_PLAN.md  (+623 more)
.ai-code-quality/: README.md  ai-code-validator.ts  architectural-knowledge.yaml  dashboard.html  package-lock.json  package.json  setup.sh  validation-policies.yaml
.autofix/: .gitignore  QUICKSTART.md  README.md  orchestrator.py  requirements.txt  run.sh
.claude/: AI_COORDINATION.md  ARCHIVE_SESSIONS.md  CHROMADB_TO_QDRANT_MIGRATION_STATUS.md  CLAUDE_CODE_AUTONOMY_COMPARISON.md  COMPLETE_FINAL_REPORT.md  COMPLETE_INFRASTRUCTURE_MAP.md  COMPLETE_SYSTEM_VERIFICATION_REPORT_2025-10-04.md  CURRENT_SESSION.md  CURRENT_SESSION.template.md  CURRENT_SESSION_W1.md  CURRENT_SESSION_W2.md  CURRENT_SESSION_W3.md  CURRENT_SESSION_W4.md  DEPLOYMENT_GUIDE_PHASE_1_2.md  DEPLOYMENT_STATUS_REPORT.md  FINAL_DEEP_ANALYSIS.md  GATEWAY_COMPLETE.md  HANDOVER_GUIDE.md  INIT.md  INTEGRATION_VERIFICATION.md  INTEL_CLEANUP_COMPLETE_2025-10-10.md  KB_DOCUMENTS_LOCATION_REPORT.md  KNOWLEDGE_BASE_INVENTORY.md  LOCAL_TEST_BLOCKED.md  MEMORY_ARCHITECTURE_ENHANCEMENT_REPORT.md  MEMORY_QUICK_WINS_COMPLETE.md  MEMORY_SYSTEM_COMPLETE_SUMMARY.md  MEMORY_TESTS_REPORT.md  MEMORY_VECTOR_INTEGRATION_COMPLETE.md  MIGRATION_COMPLETED_SUMMARY.md  MIGRATION_TO_FLY_PLAN.md  MONOREPO_DECISION.md  MONOREPO_SETUP_REPORT.md  MULTI_CLI_GUIDE.md  P0_DEPLOYMENT_HANDOVER.md  PHASE_1_EPISODIC_SEMANTIC_COMPLETE.md  PHASE_2_VECTOR_EMBEDDINGS_COMPLETE.md  PROJECT_CONTEXT.md  PROJECT_MAP.md  PROMPT_OPTIMIZER_GUIDE.md  (+28 more)
.cursor_automation/: MEGA_PROMPT.md  ORCHESTRATOR.md  README.md
.github/: CODEOWNERS  SECRETS_SETUP.md  commit_message_template.txt  copilot-instructions.md  dependabot.yml  pull_request_template.md
.husky/: pre-commit  pre-push
.next/: trace  trace-build
essential-code-backup/apps/backend-rag/: pyproject.toml  requirements.txt
essential-code-backup/apps/backend-rag/backend/: Dockerfile  bali_zero_rag.py  populate_inline.py  verify_fix.py  verify_singleton.py
essential-code-backup/apps/backend-rag/backend/api/: plugins.py
essential-code-backup/apps/backend-rag/backend/app/: __init__.py  auth_mock.py  config.py  metrics.py
essential-code-backup/apps/backend-rag/backend/app/routers/: admin_migration.py  agents.py  crm_shared_memory.py  handlers.py  oracle_ingest.py  oracle_migrate_endpoint.py  oracle_populate.py  oracle_tax.py  oracle_universal.py  search.py  team_activity.py
essential-code-backup/apps/backend-rag/backend/core/: cache.py  chunker.py  parsers.py
essential-code-backup/apps/backend-rag/backend/core/plugins/: executor.py
essential-code-backup/apps/backend-rag/backend/data/chroma_db_full_backup/1f70c886-4bda-423f-bfeb-9504fe7589c7/: index_metadata.pickle
essential-code-backup/apps/backend-rag/backend/data/chroma_db_full_backup/7efedfd9-17eb-427e-8b30-b74bbf825b9b/: index_metadata.pickle
essential-code-backup/apps/backend-rag/backend/data/chroma_db_full_backup/80816c9a-2112-45a5-a44a-d0ff04071952/: index_metadata.pickle
essential-code-backup/apps/backend-rag/backend/data/chroma_db_full_backup/cb8bc9ad-a489-4a8a-8836-26403ed3a8dd/: index_metadata.pickle
essential-code-backup/apps/backend-rag/backend/db/: __init__.py
essential-code-backup/apps/backend-rag/backend/db/migrations/: 004_profile_photos_fix.sql  005_oracle_knowledge_bases.sql
essential-code-backup/apps/backend-rag/backend/llm/: __init__.py  llama_scout_client.py
essential-code-backup/apps/backend-rag/backend/migrations/: apply_migration_007.py
essential-code-backup/apps/backend-rag/backend/plugins/: __init__.py  analytics_plugin.py  caching_plugin.py  monitoring_plugin.py  registry.py
essential-code-backup/apps/backend-rag/backend/plugins/bali_zero/: __init__.py  pricing_plugin.py
essential-code-backup/apps/backend-rag/backend/plugins/team/: __init__.py  list_members_plugin.py
essential-code-backup/apps/backend-rag/backend/scripts/: ingest_books_simple.py  ingest_text_files.py
essential-code-backup/apps/backend-rag/backend/self_healing/: backend_agent.py
essential-code-backup/apps/backend-rag/backend/services/: BEFORE_AFTER_COMPARISON.md  MODULE_USAGE_EXAMPLES.md  README_REFACTORING.md  __init__.py  alert_service.py  auto_crm_service.py  auto_ingestion_orchestrator.py  clarification_service.py  claude_haiku_enhanced.py  claude_haiku_service.py  collaborative_capabilities.py  collection_health_service.py  collective_memory_emitter.py  conversation_service.py  cultural_rag_service.py  emotional_attunement.py  golden_answer_service.py  health_monitor.py  ingestion_service.py  knowledge_graph_builder.py  politics_ingestion.py  proactive_compliance_monitor.py  query_router.py  reranker_audit.py  search_service.py  semantic_cache.py  session_service.py  shadow_mode_service.py  status_service.py  streaming_service.py  team_timesheet_service.py  work_session_service.py  zantara_tools.py
essential-code-backup/apps/backend-rag/backend/services/classification/: __init__.py
essential-code-backup/apps/backend-rag/backend/services/context/: __init__.py
essential-code-backup/apps/backend-rag/backend/services/routing/: response_handler.py  specialized_service_router.py
essential-code-backup/apps/backend-rag/backend/services/tools/: __init__.py
(+9679 files in other folders)
