# ============================================================================
# PYTHON CODE QUALITY CONFIGURATION
# ============================================================================
# Configuration for Python linting, formatting, and type checking
# ============================================================================

[project]
name = "nuzantara-backend-rag"
version = "1.0.0"
description = "NUZANTARA RAG Backend with FastAPI"
requires-python = ">=3.10"

# ============================================================================
# BLACK - Code Formatter
# ============================================================================
[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.mypy_cache
  | \.pytest_cache
  | __pycache__
  | build
  | dist
  | migrations
)/
'''

# ============================================================================
# ISORT - Import Sorting
# ============================================================================
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_glob = ["*/migrations/*", "*/.venv/*"]

# ============================================================================
# MYPY - Static Type Checker
# ============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
pretty = true

# Paths
files = ["*.py"]
exclude = [
    "^migrations/",
    "^tests/",
    "^\\.venv/"
]

# Per-module options
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "fastapi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pydantic.*"
ignore_missing_imports = true

# ============================================================================
# PYLINT - Comprehensive Linter
# ============================================================================
[tool.pylint.main]
py-version = "3.10"
jobs = 0  # Auto-detect CPUs
recursive = true
suggestion-mode = true

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0111",  # missing-docstring (handled by separate rule)
    "R0903",  # too-few-public-methods (Pydantic models)
    "W0212",  # protected-access (sometimes needed)
]

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_", "id", "db"]
class-naming-style = "PascalCase"
function-naming-style = "snake_case"
method-naming-style = "snake_case"
const-naming-style = "UPPER_CASE"
variable-naming-style = "snake_case"

[tool.pylint.design]
max-args = 5
max-attributes = 10
max-branches = 12
max-locals = 15
max-returns = 6
max-statements = 50
min-public-methods = 1

[tool.pylint.format]
max-line-length = 100
max-module-lines = 500

# ============================================================================
# FLAKE8 - Style Guide Enforcement
# ============================================================================
[tool.flake8]
max-line-length = 100
max-complexity = 10
extend-ignore = ["E203", "E266", "E501", "W503"]
extend-exclude = [".venv", "migrations", "__pycache__", "*.pyc"]
per-file-ignores = [
    "__init__.py:F401",  # Allow unused imports in __init__.py
    "tests/*:S101"       # Allow assert in tests
]

# ============================================================================
# PYTEST - Testing Framework
# ============================================================================
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=70",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# ============================================================================
# COVERAGE - Code Coverage
# ============================================================================
[tool.coverage.run]
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/.venv/*",
    "*/migrations/*",
    "setup.py",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ============================================================================
# BANDIT - Security Linter
# ============================================================================
[tool.bandit]
targets = ["."]
exclude_dirs = ["/tests", "/.venv", "/migrations"]
severity = "medium"
confidence = "medium"
max_lines = 500

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*/tests/*"]

# ============================================================================
# RUFF - Fast Python Linter (Modern Alternative)
# ============================================================================
[tool.ruff]
line-length = 100
target-version = "py310"

# Enable specific rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]

# Ignore specific rules
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports
"tests/*" = ["S101", "ARG"]  # Allow assert and unused arguments

[tool.ruff.isort]
known-first-party = ["app", "routers", "services", "models"]

[tool.ruff.mccabe]
max-complexity = 10
